# campus_life_hub_project_backend

./: .gitignore  auth.py  database.py  main.py  pyproject.toml  requirements.txt
models/: __init__.py  announcement.py  bookmark.py  location.py  subject.py  timetable.py  user.py
routers/: announcements.py  auth.py  bookmarks.py  location.py  subjects.py  timetable.py
schemas/: announcement.py  auth.py  bookmark.py  location.py  subject.py  timetable.py  user.py
scripts/: runcode.ps1
services/: auth_service.py
test/: test_announcements.py
