[tool.poetry]
name = "campus-life-hub-backend"
version = "0.1.0"
description = "Campus Life Hub Backend"
authors = ["อิลฮัม หะยีดอเล๊าะ <ihsaniah112@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
sqlalchemy = "^2.0.43"
aiosqlite = "^0.21.0"
psycopg2 = "^2.9.10"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.11.9"}
python-multipart = "^0.0.20"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
